--- a/app/src/main/res/layout/fragment_detalle_producto.xml
+++ b/app/src/main/res/layout/fragment_detalle_producto.xml
@@ -105,7 +105,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
-            <!-- View para crear espacio -->
+            <!-- View para crear espacio entre la descripción y los botones de comprar y chat.-->
             <View
                 android:id="@+id/separadorDescripcion"
                 android:layout_width="0dp"
